# finance-advisor

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DoD_checklist.md  api_contract.yaml  labeling_guide.md  metrics_nfrs.md  one_pager.md  person_stories.md  risks.md  taxonomy.yaml
docs/schema/: csv_input_schema.yaml  db_schema.sql
