[project]
name = "finance-advisor"
version = "0.1.0"
description = "Finance Advisor Dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "faker>=37.5.3",
    "fastapi>=0.116.1",
    "mlflow>=3.2.0",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "pydantic>=2.11.7",
    "pyod>=2.0.5",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]
